<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.androidtest.Activity.LoginMainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:drawableLeft="@drawable/ic_action_account"
                android:ems="10"
                android:hint="@string/emailAdd"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="137dp" />

            <EditText
                android:id="@+id/passText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_action_key"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="198dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Login/SignUP"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="343dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                tools:layout_editor_absoluteX="181dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
